--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "firebase-tools": "^8.16.2"
   }
 }
